src/elk/templates/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.4.3
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: backup-volume
              mountPath: /usr/share/elasticsearch/backup
      volumes:
        - name: backup-volume
          persistentVolumeClaim:
            claimName: elastic-backup-pvc
